--- a/main.css
+++ b/main.css
@@ -43,16 +43,64 @@
   font-size: 18px;
 }
 
+/* Custom text button */
+.btn-link,
+.btn-link:hover,
+.btn-link:focus {
+
+  width: 159px;
+  height: 59px;
+  left: 591px;
+  top: 582px;
+
+  border-radius: 3px;
+  color: #fff;
+  font-family: bebas-neue-pro-expanded, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+}
+
+/* Custom text button */
+.btn-link-dark,
+.btn-link-dark:hover,
+.btn-link-dark:focus {
+
+  width: 159px;
+  height: 59px;
+  left: 591px;
+  top: 582px;
+
+  border-radius: 3px;
+  color: #000000;
+  font-family: bebas-neue-pro-expanded, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+}
+
+.dark {
+  color: #000000;
+}
+
 
 /*
  * Base structure
  */
 
 body {
-  background-image: url('img/vrcpicture.jpg');
+  background-image: url('img/towertakeovertwo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
+}
+
+.body-standard {
+  background-color: black;
+}
+
+.darkbkg {
+  background-color: #171717;
 }
 
 .title-name {
@@ -133,6 +181,30 @@ body {
   position: relative;
 }
 
+.third-section-txt {
+  font-family: bebas-neue-pro-semiexpanded, sans-serif;
+  font-weight: 600;
+  font-style: italic;
+  font-size: 10vw;
+}
+
+.fourth-section {
+  height: 100%;
+  width: 100%;
+
+  background: #F8F8F8;
+  ;
+}
+
+.fourth-section-score {
+  font-family: bebas-neue-pro-expanded, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 28px;
+  text-align: left;
+  padding-left: 40px;
+}
+
 
 
 
@@ -166,4 +238,20 @@ body {
 .responsive {
   width: 100%;
   height: auto;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
+
+.centered-bottom {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
 }
