--- a/main.css
+++ b/main.css
@@ -224,6 +224,17 @@ body {
   padding-left: 40px;
 }
 
+.game-page-header {
+  font-family: bebas-neue-pro-semiexpanded, sans-serif;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 90px;
+  text-align: left;
+  align-items: flex-start;
+  padding-left: 40px;
+  padding-right: 10px;
+}
+
 
 
 
