added some new stuff to pages
Note: In depth details of events is now not used, but page is still kept for some certain purposes

--- a/main.css
+++ b/main.css
@@ -224,6 +224,14 @@ body {
   padding-left: 40px;
 }
 
+.white-section {
+  height: 100%;
+  width: 100%;
+
+  background: #fff;
+  ;
+}
+
 .event-card {
   height: 100%;
   width: 100%;
