--- a/main.css
+++ b/main.css
@@ -100,6 +100,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
+    background-attachment: fixed;
 }
 
 .join-background {
@@ -247,7 +248,7 @@ body {
   font-family: bebas-neue-pro-semiexpanded, sans-serif;
   font-weight: 700;
   font-style: italic;
-  font-size: 90px;
+  font-size: 10vw;
   text-align: left;
   align-items: flex-start;
   padding-left: 40px;
