added many things
About us home page block, started tower takeover page, changed some stuff in some pages, changed home screen image

--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ body {
 }
 
 .home-background {
-  background-image: url('img/towertakeovertwo.jpg');
+  background-image: url('img/homescreen4.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
@@ -108,6 +108,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
+    background-attachment: fixed;
 }
 
 .body-standard {
@@ -223,6 +224,11 @@ body {
   font-size: 28px;
   text-align: left;
   padding-left: 40px;
+}
+
+.fifth-section {
+  height: 100%;
+  width: 100%;
 }
 
 .white-section {
