--- a/main.css
+++ b/main.css
@@ -86,6 +86,18 @@
 }
 
 
+.navbar {
+  position: relative;
+}
+
+.brand {
+  position: absolute;
+  left: 50%;
+  margin-left: -50px !important;  /* 50% of your logo width */
+  display: block;
+}
+
+
 /*
  * Base structure
  */
