--- a/main.css
+++ b/main.css
@@ -193,7 +193,7 @@ body {
 }
 
 .cover-container {
-  max-width: 42em;
+  max-width: 100%;
 }
 
 .first-section {
@@ -280,6 +280,8 @@ body {
  * Header
  */
 
+/*
+
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
@@ -288,10 +290,21 @@ body {
   border-bottom: .25rem solid transparent;
 }
 
+*/
+
+.nav-item {
+  font-family: bebas-neue-pro-semiexpanded, sans-serif;
+  font-size: 18px;
+  color: white;
+}
+
+/*
+
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
   border-bottom-color: rgba(255, 255, 255, .25);
 }
+
 
 .nav-masthead .nav-link + .nav-link {
   margin-left: 1rem;
@@ -302,6 +315,18 @@ body {
   border-bottom-color: #fff;
 }
 
+*/
+
+
+@media (max-width: 990px) {
+  .navbar-brand {
+    float: left;
+  }
+  .navbar-nav {
+    float:left;
+    text-align: left;
+  }
+}
 
 .responsive {
   width: 100%;
