--- a/main.css
+++ b/main.css
@@ -275,6 +275,20 @@ body {
 
 
 
+/* Footer */
+
+.footer-section {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.footer-icon {
+  color: black;
+  font-size: 25px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
 
 /*
  * Header
