--- a/main.css
+++ b/main.css
@@ -112,26 +112,26 @@ body {
 
 .home-background {
   background-image: url('img/homescreen4.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
-    background-attachment: fixed;
+    
+  background-size: cover;
+  background-position-x: center;
+  background-attachment: scroll;
 }
 
 .join-background {
   background-image: url('img/ctfacilitytwo.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
-    background-attachment: fixed;
+    
+  background-size: cover;
+  background-position-x: center;
+  background-attachment: scroll;
 }
 
 .about-background {
   background-image: url('img/vrcpicture.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
-    background-attachment: fixed;
+    
+  background-size: cover;
+  background-position-x: center;
+  background-attachment: scroll;
 }
 
 
