--- a/main.css
+++ b/main.css
@@ -6,6 +6,13 @@ html {
   overscroll-behavior-y: none;
 }
 
+html.has-scroll-smooth {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
 /* Custom default button */
 .btn-dark,
